--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,5 +1,9 @@
 @import "_mixins/font-face";
 
 @include font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular");
-@include font-face("GTWalsheimPro", "../fonts/GTWalsheimProThin/GTWalsheimProThin");
+@include font-face("roboto-example", "../fonts/RobotoMedium/RobotoMedium", 500);
 @include font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold);
+@include font-face("GTWalsheimPro", "../fonts/GTWalsheimProThin/GTWalsheimProThin", 200);
+@include font-face("GTWalsheimPro", "../fonts/GTWalsheimProLight/GTWalsheimProLight", 300);
+@include font-face("GTWalsheimPro", "../fonts/GTWalsheimProRegular/GTWalsheimProRegular", 400);
+@include font-face("GTWalsheimPro", "../fonts/GTWalsheimProMedium/GTWalsheimProMedium", 500);
