--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,6 +1,7 @@
 $default-font: "roboto-example", sans-serif;
-$accent: orange;
-
+$accent:rgba(215,14,98,1);
+$blue: #1f4a8e;
+$grey: #f9f9f9;
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px;
 $grid-columns: 12;
@@ -8,3 +9,5 @@ $grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1255px);
 $container-max-widths: (sm: 540px, md: 720px, lg: 960px, xl: 1255px);
 
 $gutter: $grid-gutter-width;
+
+$gutter2: 106px
