--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -34,6 +34,16 @@
 			background-size: contain;
 			background-position: center;
 		}
+		&.buy2 {
+			padding: 10px 13px;
+			font-weight: bold;
+			&:before {
+				background: url(../img/but_buy2.png) no-repeat;
+				background-size: contain;
+				background-position: center;
+			}
+
+		}
 	}
 }
 
@@ -643,6 +653,69 @@ header {
 			}
 		}
 	}
+}
+.seo_text {
+	padding-bottom: 110px;
+	.gradient.text {
+		font-size: 36px;
+		letter-spacing: 2px;
+		text-transform:uppercase;
+		line-height: 1;
+		padding-bottom:$gutter;
+
+	}
+	&_pic {
+		min-height: 560px;
+		height: 560px;
+		width: 100%;
+		&_wrap {
+		background-size: cover !important;
+		}
+	}
+	&_block {
+			font-size: 14px;
+			line-height: 1.2;	
+			z-index: 2;
+			&.gradient_seo {
+				p {
+					font-size: 16px;
+					line-height: 1.65;
+					max-width: 275px;
+				}
+				&_block {
+						content: " ";
+						position: absolute;
+						display: block;
+						top: 0;
+						bottom: 0;
+						left: 0;
+						right: 0;
+						width: 500%;
+						z-index: 1;
+						overflow: hidden;
+						background: rgba(243,231,233,1);
+						background: -moz-linear-gradient(left, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
+						background: -webkit-gradient(left top, right top, color-stop(0%, rgba(243,231,233,1)), color-stop(100%, rgba(227,238,255,1)));
+						background: -webkit-linear-gradient(left, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
+						background: -o-linear-gradient(left, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
+						background: -ms-linear-gradient(left, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
+						background: linear-gradient(to right, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
+						filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e7e9', endColorstr='#e3eeff', GradientType=1 );
+
+				}
+			}
+	}
+	&_frame {
+		width: 100%;
+		height: 505px;
+	}
+	.buy2 {
+		margin-top: $gutter;
+	}
+}
+footer {
+	padding: 50px 0;
+	
 }
 @import "media"; // Always at the end
 	
