--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -748,6 +748,35 @@ header {
 		margin-top: $gutter;
 	}
 }
+.filter {
+	&_block {
+		&-head {
+			padding-bottom: 25px;
+			padding-left: 20px;	
+			font-weight: 500;
+			font-size: 14px;
+			text-transform: uppercase;
+			color:$blue;
+		}
+		&-wrap {
+			&-link {
+				font-size: 14px;
+				padding: 25px 0;
+				padding-left: 20px;	
+				display: block;
+				&-new {
+				margin-left: 20px;
+				display: inline-block;
+				color: #fff;
+				font-size: 11px;
+				font-weight: 500;
+				text-transform: uppercase;
+
+				}
+			}
+		}
+	}
+}
 footer {
 	padding: 50px 0;
 	
