--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2,6 +2,19 @@
 @import "fonts";
 @import "libs";
 @import "_mixins/retina";
+.margin {
+	&_top100 {
+		margin-top: 100px;
+	}
+}
+.padding {
+	&_top100 {
+		padding-top: 100px;
+	}
+	&_left_gut {
+		padding-left: $gutter;
+	}
+}
 .but {
 	background-color: $blue;
 	font-family: $default-font;
@@ -108,6 +121,13 @@ ul.breadcrumb li a {
 ul.breadcrumb li a:hover {
 	text-decoration: underline;
 } 
+.gradient_green {
+	background: rgb(116,197,0); /* Old browsers */
+	background: -moz-linear-gradient(left, rgba(116,197,0,1) 0%, rgba(0,138,126,1) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(left, rgba(116,197,0,1) 0%,rgba(0,138,126,1) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to right, rgba(116,197,0,1) 0%,rgba(0,138,126,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#74c500', endColorstr='#008a7e',GradientType=1 ); /* IE6-9 */
+}
 .gradient {
 				background: rgba(215,14,98,1);
 				background: -moz-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
@@ -150,7 +170,7 @@ ul.breadcrumb li a:hover {
 		padding-bottom: 0 !important;
 	}
 }
-h2,h3 {
+h2,h3,a {
 	&.gradient.text{
 		padding-top: $gutter2;
 		padding-bottom: 41px;
@@ -484,6 +504,45 @@ header {
 			}
 	}
 	}
+	&_major_link {
+		color: $blue;
+		font-size: 14px;
+		text-decoration: underline;
+		display: inline-block;
+		position: relative;
+		padding-left: 30px;
+		&:before {
+			content:'';
+			width: 20px;
+			display: inline-block;
+			height: 20px;
+			background: url(../img/major_link.png) no-repeat;
+			background-size: contain;
+			margin-right: 10px;
+		}
+
+	}
+	&_add {
+		margin-top: 200px;
+		&:first-child {
+			margin-top: 150px;
+		}
+		.gradient.text {
+			padding-top: 0;
+			padding-bottom: 0;
+			margin-bottom: 41px;
+		}
+		&_info {
+			.but.buy {
+				float: none;
+			}
+		}
+		&_price {
+			color: $accent;
+			padding: $gutter 0;
+		}
+
+	}
 }
 .professionals {
 	&_disc {
@@ -506,6 +565,7 @@ header {
 	&_banner {
 		@include background-2x( '../img/professionals_banner', 'png');
 		background-size: cover;
+		padding-top: 45px;
 		min-height: 208px;
 		text-align: center;
 		text-transform: uppercase;
@@ -631,15 +691,52 @@ header {
 	&_item {
 		border: 3px solid $grey;
 		&_img {
-			margin-bottom: 44px;
+			text-align: center;
+			position: relative;
+			padding: 15px 15px 70px 15px;
 			img {
 				object-fit: contain;
+			}
+		}
+		&_popup {
+			background-color: rgba(255, 255, 255, 0.9);
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 0;
+			bottom: 0;
+			display: none;
+			.but {
+				width: 94%;
+				border: 1px solid;
+				background: transparent;
+				color: $blue;
+				font-weight: bold;
+				font-size: 11px;
+			}
+			.options {
+				padding: 10px;
+				padding-bottom: 0;
+				&_row {
+					padding-bottom: 15px;
+				}
+				&_cell {
+					text-align: left;
+					min-height: 20px;
+					width: 33.33333%;
+					display: block;
+					float: left;
+					font-size: 12px;
+					color:#000000;
+					&.head {
+						color: #666666;
+					}
+				}
 			}
 		}
 		&_disc {
 			background-color: $grey;
 			padding: 15px;
-			padding-top: 0;
 		}
 		&_icons {
 			padding-bottom: 20px;
@@ -647,6 +744,17 @@ header {
 				font-size: 16px;
 				color: #a7a7a7;
 			}
+	.hit {
+		padding: 5px 10px;
+		text-align: center;
+		color:#fff;
+		font-size: 11px;
+		display: inline-block;
+		font-weight: 500;
+		text-transform: uppercase;
+		letter-spacing: 2px;
+		margin-left:20px;
+	}
 		}
 		&_link {
 			color: $blue !important;
@@ -698,6 +806,13 @@ header {
 	}
 }
 .seo_text {
+	ul {
+		li {
+			display: block;
+			padding-left: $gutter;
+			padding-bottom: 20px;
+		}
+	}
 	padding-bottom: 110px;
 	.gradient.text {
 		font-size: 36px;
@@ -834,7 +949,60 @@ header {
 			color: $blue;
 		}
 	}
+ &_sort {
+ 	font-size: 14px;
+ 	margin-bottom: $gutter;
+ 	span {
+ 		color:#002d40;
+ 		font-size: 14px;
+ 		padding-right: 15px;
+ 	}
+ 	a {
+ 		color: #798697;
+ 		position: relative;
+ 		margin-right: 15px;
+ 		&.active {
+ 			color: #333333;
+ 			&:after {
+ 				content: '';
+				width: 10px;
+				height: 5px;
+				background: url(../img/arrow_up.png) no-repeat;
+				display: inline-block;
+				margin-bottom: 2px;
+				margin-left: 5px;
+				-webkit-transition: all ease .4s;
+				-o-transition: all ease .4s;
+				-ms-transform: rotate(-180deg);
+			    transform: rotate(-180deg);
+			    -webkit-transform: rotate(-180deg);
+				transition: all ease .4s;
+ 			} 
 
+ 		}
+ 	}
+
+ }
+ &_number {
+ 	font-size: 14px;
+ 	margin-bottom: $gutter;
+ 	span {
+
+ 		padding-right: 15px;
+ 	}
+ 	a {
+		color:#798697;
+ 		margin-right: 15px;
+ 		&.active {
+ 			color: #333333
+
+ 		}
+ 		&:last-child {
+ 			margin-right: 0;
+ 		}
+
+ 	}
+ }
 }
 .select {
 	&_wrap {
@@ -844,6 +1012,195 @@ header {
 			text-transform: uppercase;
 			display: block;
 			margin-bottom: $gutter;
+		}
+	.select2-container .select2-selection--single {
+		height: 38px;
+		.select2-selection__rendered {
+			padding-left: 0;	
+		}
+	}
+	.select2-container--default .select2-selection--single {
+		background-color: transparent;
+		border: none;
+		padding-bottom: 10px;
+		border-bottom: 1px solid #a5a4a4;
+		border-radius:0;
+	}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+	text-transform:uppercase;
+	font-size: 14px;
+}
+}
+}
+.navigation {
+	&_prev {
+		background: url(../img/arrow_left.svg) no-repeat;
+		width: 27px;
+		height: 9px;
+		background-size: contain;
+	}
+	&_next {
+		background: url(../img/arrow_right.svg) no-repeat;
+		width: 27px;
+		height: 9px;
+		background-size: contain;
+	}
+	a {
+		display: inline-block;
+		margin-right: 20px;
+		color: $blue;
+		&.cur {
+			color: #aaaaaa;
+		}
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+}
+.links {
+	margin-top: 90px;
+	&_block {
+		display: flex;
+		justify-content: center;
+		position: relative;
+		align-items:center;
+		width:calc(20% - 15px);
+		margin: 0 15px;
+		margin-bottom: $gutter;
+		min-height: 145px;
+		background-color: #f2f1ff;
+		font-family: "GTWalsheimPro";
+		font-weight: 500;
+		text-align: center;
+		text-transform: uppercase;
+		background-repeat: no-repeat;
+		background-size: cover;
+		font-size: 15px;
+		letter-spacing:1px;
+		&:first-child {
+			margin-left: 0;
+		}
+		&:last-child {
+			margin-right: 0;
+		}
+		&.no_icon {
+				color:#fff;
+			}
+		&.icon {
+
+			span{
+				display: inline-block;
+				position: relative;
+				padding-left: 70px;
+				text-align: left;
+				&:before {
+					content:'';
+					width: 55px;
+					height: 45px;
+					display: block;
+					position: absolute;
+					left: 0;
+					background-repeat: no-repeat;
+				}
+			
+			}
+				&.icon1 span:before {
+					@include background-2x( '../img/links_block_icon', 'png');
+				}
+				&.icon2 span:before {
+					@include background-2x( '../img/links_block_icon2', 'png');
+				}
+				&.icon3 span:before {
+					@include background-2x( '../img/links_block_icon3', 'png');
+				}
+				&.icon4 span:before {
+					@include background-2x( '../img/links_block_icon4', 'png');
+				}
+				&.icon5 span:before {
+					@include background-2x( '../img/links_block_icon5', 'png');
+				}
+				&.icon6 span:before {
+					@include background-2x( '../img/links_block_icon6', 'png');
+				}
+				&.icon7 span:before {
+					@include background-2x( '../img/links_block_icon7', 'png');
+				}
+
+		}
+		a {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			z-index: 99;
+		}
+	}
+}
+.arch{
+	&_tabs {
+		width: 100%;
+		&_item {
+	 	width: 50%;
+		font-size: 15px;
+		padding: $gutter 0;
+		border-top: 2px solid #eee9f0;
+		color: $blue;
+		font-weight: 500;
+		&.left {
+			text-align: right;
+			padding-right: 50px;
+
+		}
+		&.right {
+			text-align: left;
+			padding-left: 50px;
+
+		}
+		&.active {
+			color: #333333;
+			background-color: #eee9f0;
+		}
+		&.inactive {
+			background-color: #fff;
+		}
+	}
+	}
+	&_info {
+		padding:50px 0;
+		table {
+			margin-top: 50px;
+			margin-bottom: 135px;
+			width: 100%;
+			color: #333333;
+			font-weight: 500;
+			font-size: 15px;
+			tr {
+				th {
+					border: 2px solid #fff;
+					text-align: center;
+					padding: 20px;
+				}
+				td {
+					border: 2px solid #fff;
+					text-align: left;
+					padding: 35px;
+					vertical-align: top;
+					img {
+						width: 420px;
+					}
+					a.arch_info_link {
+						color: $blue;
+						text-transform: uppercase;
+						font-size: 12px;
+						text-decoration: underline;
+						font-weight: normal;
+						display: inline-block;
+						&:hover {
+							text-decoration: none;
+
+						}
+					}
+				}
+			}
 		}
 	}
 }
