--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -11,3 +11,10 @@
 @include font-face("GTWalsheimPro", "../fonts/GTWalsheimProRegular/GTWalsheimProRegular", 400);
 @include font-face("GTWalsheimPro", "../fonts/GTWalsheimProMedium/GTWalsheimProMedium", 500);
 @include font-face("MetrolineIcons", "../fonts/MetrotileIcon/metrotile");
+
+
+
+
+.fz12 {
+	font-size: 12px;
+}
