--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -51,6 +51,9 @@
 	&_bot100 {
 		margin-bottom: 100px;
 	}
+	&_top_gut {
+		margin-top: $gutter;
+	}
 }
 .padding {
 	&_top100 {
@@ -1513,6 +1516,59 @@ header {
 			left: 0;
 			top: calc(50% - 9px);
 		}
+	}
+	&_item {
+		padding: 15px $gutter;
+		background-color: #f9f9f9;
+		border-bottom: 1px solid #e6e6e6;
+		margin-bottom: $gutter;
+		&_img {
+			width: 160px;
+			height: 100px;
+			margin-right: 60px;
+			img {
+				width: 100%;
+				height: 100%;
+			}
+		}
+		.blue_link {
+				text-transform: none;
+				font-weight: normal;
+			}
+		&_left,&_right {
+			width: 50%;
+		}
+		&_price {
+			padding-left: 80px;
+			padding-right: 65px;
+				&-old {
+					font-size: 12px;
+					color: #696e7d;
+					text-decoration: line-through;
+				}
+				&-cur {
+					font-size: 20px;
+				}
+		}
+		&_quantity {
+			padding-right: 60px;
+			span {
+				padding-left: 10px;
+			}
+
+		}
+		&_del {
+			margin-left: 50px;
+			width: 14px;
+			height: 14px;
+			display: inline-block;
+			@include background-2x( '../img/cart_del', 'png');
+		}
+	&_total {
+		font-weight: 300;
+		font-size: 35px;
+		display: inline-block;
+	}
 	}
 }
 footer {
