--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2,6 +2,36 @@
 @import "fonts";
 @import "libs";
 @import "_mixins/retina";
+.radio {
+			label{
+				color: #333333;
+				float: left;
+				padding-left: 25px;
+				position: relative;
+				cursor: pointer;
+				font-size: 14px;
+				&:before{
+					content: "";
+					width: 16px;
+					height: 16px;
+					position: absolute;
+					border: 4px solid $accent;
+					border-radius: 50%;
+					left: 0;
+					transition: all ease 0.3s;
+					top: calc(50% - 8px);
+				}
+				&.active:before {
+					background-color: $accent;
+				}
+			}
+				input[type="radio"]{
+					position: absolute;
+					visibility: hidden;
+					opacity: 0;
+					left: 0;
+					}
+		}	
 .new_item {
 		color:#fff;
 		display: inline-block;
@@ -847,6 +877,7 @@ header {
 			background: #fff;
 			display: inline-block;
 			color: #333333;
+			white-space: nowrap;
 				&-minus {
 					float: left;
 					width:30px;
@@ -1106,6 +1137,12 @@ header {
 	font-size: 14px;
 }
 }
+	&_country {
+		width: 100%;
+		.select2-container {
+			width: 100% !important;
+		}
+	}
 }
 .navigation {
 	&_prev {
@@ -1604,6 +1641,7 @@ header {
 			width: 50%;
 		}
 		&_price {
+			white-space: nowrap;
 			padding-left: 80px;
 			padding-right: 65px;
 				&-old {
@@ -1617,6 +1655,8 @@ header {
 		}
 		&_quantity {
 			padding-right: 60px;
+			white-space: nowrap;
+
 			span {
 				padding-left: 10px;
 			}
@@ -1802,6 +1842,138 @@ header {
 }
 .offers {
 
+}
+.order {
+	&_wrap {
+		margin-bottom: 20px;
+	}
+	&_block {
+		width: 100%;
+		background-color: #f9f9f9;
+		padding: $gutter;
+		border-bottom: 2px solid #e6e6e6;
+		&:last-child {
+			border-bottom: none;
+		}
+		&_button{
+			background-color: #f9f9f9;
+			padding:25px 15px;
+			.blue_link {
+				text-transform: uppercase;
+				font-weight: 500;
+			}
+		}	
+		.radio {
+			position: relative;
+			label {
+				padding-left: 100px;
+			}
+		&:before {
+
+					content:'';
+					width: 55px;
+					height: 45px;
+					display: block;
+					position: absolute;
+					left: 30px;
+					top: calc(50% - 20px);
+					background-repeat: no-repeat;
+					@include background-2x( '../img/links_block_icon9', 'png');
+
+		}
+		&.radio2:before {
+					@include background-2x( '../img/links_block_icon10', 'png');
+
+		}
+
+		&.radio3:before {
+					@include background-2x( '../img/links_block_icon11', 'png');
+
+		}
+		&.radio4:before {
+					@include background-2x( '../img/features_right5', 'png');
+
+		}
+		&.no_icon{
+			&:before {
+			display: none;
+			}
+			label {
+				padding-left: 40px;
+			}
+		}
+	}
+	}
+	&_quantity {
+		white-space: nowrap;
+	}
+	&_head {
+		padding:25px $gutter;
+		.blue_link {
+			float: right;
+			text-transform: uppercase;
+			font-weight: 500;
+			display: inline-block;
+			border-bottom: 1px dashed #515c6b;
+			text-decoration: none;
+			&:hover {
+				border-bottom: none;
+			}
+		}
+	}
+	&_img {
+		min-height: 100px;
+		width: 160px;
+		margin-right: 50px;
+		img {
+			width: 100%;
+			height: 100%;
+		}
+
+
+	}
+	&_total_price {
+		padding-left: 60px;
+		font-size: 20px;
+		white-space: nowrap;
+	}
+
+	&_radio_txt {
+		padding-left: 100px;
+		font-size: 12px;
+		max-width: 450px;
+		padding-right: 13px;
+	}
+	&_delivery {
+		border-bottom: none;
+		&_block {
+			margin-bottom: $gutter*2;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+		&_left {
+			float: left;
+		}
+		&_right {
+			float: right;
+			font-size: 20px;
+		}
+	}
+	&_payment_head {
+		margin-bottom: 20px;
+		color:#565656;
+		font-size: 12px;
+		font-weight: bold;
+	}
+	.calc_form {
+		padding: 0;
+		margin-top: 0;
+		&_input {
+			font-weight: normal;
+			font-size: 14px;
+		}
+	}
 }
 footer {
 	margin-top: 100px;
