--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2,7 +2,7 @@
 @import "fonts";
 @import "libs";
 @import "_mixins/retina";
-.radio {
+.radio,.checkbox {
 			label{
 				color: #333333;
 				float: left;
@@ -25,13 +25,39 @@
 					background-color: $accent;
 				}
 			}
-				input[type="radio"]{
+				input[type="radio"],input[type="checkbox"]{
 					position: absolute;
 					visibility: hidden;
 					opacity: 0;
 					left: 0;
 					}
-		}	
+		}
+.checkbox {
+	a {
+		text-decoration: underline;
+		color: #666666;
+		&:hover {
+			text-decoration: none;
+		}
+	}
+	label {
+		color: #666666;
+		font-size: 12px;
+		padding-left: 30px;
+		&:before {
+		background-color: #ff0066;
+		border-radius: 2px;
+		border:none;
+		transition: none;
+
+		}
+				&.active:before {
+					background: url(../img/checkbox.png) no-repeat;
+					background-color: transparent;
+				}
+	}
+	
+}	
 .new_item {
 		color:#fff;
 		display: inline-block;
@@ -149,6 +175,9 @@
 		}
 		&.accept {
 			float: none;
+		}
+		&.order {
+			padding: 10px 50px;	
 		}
 	}
 }
@@ -1138,10 +1167,32 @@ header {
 }
 }
 	&_country {
+		position: relative;
 		width: 100%;
 		.select2-container {
 			width: 100% !important;
 		}
+	.select2-container--default .select2-selection--single .select2-selection__rendered {
+		text-transform:none;
+		position: relative;
+		&:before {
+			content:'';
+			width: 16px;
+			height: 16px;
+			display: inline-block;
+			background: url(../img/search.png) no-repeat;
+			background-size: contain;
+			margin-right: 10px;
+		}
+	}
+	.select2-container--default .select2-selection--single .select2-selection__arrow {
+		display: none;
+	}
+	&_bottom {
+		position: absolute;
+		color: #999999;
+		font-size: 12px;
+	}
 	}
 }
 .navigation {
@@ -1855,12 +1906,19 @@ header {
 		&:last-child {
 			border-bottom: none;
 		}
+		.blue_link {
+			text-transform: none;
+			font-weight: normal;
+		}
 		&_button{
 			background-color: #f9f9f9;
 			padding:25px 15px;
 			.blue_link {
 				text-transform: uppercase;
 				font-weight: 500;
+			}
+			&.submit {
+				background-color: #fff;
 			}
 		}	
 		.radio {
@@ -1972,6 +2030,44 @@ header {
 		&_input {
 			font-weight: normal;
 			font-size: 14px;
+		}
+	}
+	&_total {
+		padding-bottom: 15px;
+		padding-top: 15px;
+		border-bottom: 1px solid #e5e5e5;
+		.price {
+			padding-left: 15px;
+			font-weight: 300;
+		}
+
+	}
+}
+.otzyvy {
+	&_item {
+		margin-top: 30px;
+		display: block;
+		min-height: 320px;
+		border:1px solid #bdbdbd;
+		img {
+			width: 100%;
+			height: 100%;
+		}
+	}
+	&_send {
+		font-size: 14px;
+		height: auto;
+		&_wrap {
+			padding:0 60px;
+			height: 100%;
+			background-color: #f9f9f9;
+		}
+		&_head {
+			font-weight: 300;
+		}
+		.blue_link {
+			text-transform: none;
+			font-weight: normal;
 		}
 	}
 }
