--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -6,6 +6,7 @@
 @include font-face("roboto-example", "../fonts/RobotoMedium/RobotoMedium", 500);
 @include font-face("roboto-example", "../fonts/RobotoBlack/Roboto-Black", 600);
 @include font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold);
+@include font-face("GTWalsheimPro", "../fonts/GTWalsheimProUltraLight/GTWalsheimProUltraLight", 100);
 @include font-face("GTWalsheimPro", "../fonts/GTWalsheimProThin/GTWalsheimProThin", 200);
 @include font-face("GTWalsheimPro", "../fonts/GTWalsheimProLight/GTWalsheimProLight", 300);
 @include font-face("GTWalsheimPro", "../fonts/GTWalsheimProRegular/GTWalsheimProRegular", 400);
