--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -97,6 +97,16 @@
 	&.no_border {
 		text-decoration: none;
 	}
+	&.dashed {
+		text-transform: none;
+		text-decoration: none;
+		border-bottom: 1px dashed $blue;
+		font-weight: normal;
+		font-size: 14px;
+		&:hover {
+			border-bottom: 1px solid transparent;
+		}
+	}
 
 }
 .tooltip {
@@ -118,6 +128,9 @@
 	}
 	&_bot_gut {
 		margin-bottom: $gutter;
+	}
+	&_right_gut {
+		margin-right: $gutter;
 	}
 }
 .padding {
