--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -418,52 +418,86 @@ body {
 b, strong {
 	font-weight: bold;
 }
-header {
+
+.b-header {
 	display: flex;
 	height: 80px;
 	text-transform: uppercase;
 	font-size: 12px;
-	.header {
-		&_menu_left {
-				li {
-					display: inline-block;
-					margin-right: 72px;
-					a {
-						letter-spacing: 1px;
-					}
-					&:last-child{
-							margin-right: 0;
-					}
-				}
-			}
-		&_logo {
-				width: 85px;
-				height: 48px;
-			a {
-				display: block;
-				width: 100%;
-				height: 100%;
+	&__logo-container {
+		width: 85px;
+		height: 48px;
+	}
+	&__logo-link {
+		display: block;
+		width: 100%;
+		height: 100%;
+	}
+}
 
-			}
-
-		}
-		&_menu_right {
-			a {
-				font-size: 16px;
-				margin-right: 19px;
-
-			}
-			&_icons {
-				float: right;
-				a {
-					display: inline-block;
-					margin-left: 36px;
-					margin-right: 0;
-				}
-			}
-		}
+.b-topmenu {
+	&__list { }
+	&__item {
+		display: inline-block;
+		margin-right: 72px;
+		&:last-child{
+			margin-right: 0;
 		}
 	}
+	&__link {
+		letter-spacing: 1px;
+	}
+	&__phone {
+		font-size: 16px;
+		margin-right: 19px;	
+	}
+	&__icons-container {
+		float: right;
+	}
+}
+
+.b-header-icons {
+	&__link {
+		display: inline-block;
+		margin-left: 36px;
+		margin-right: 0;
+		font-size: 16px;
+	}
+}
+
+.b-intro {
+	&__slider {
+		position: relative;
+	}
+	&__item {
+		min-height: 797px;
+		background-repeat: no-repeat !important;
+		background-size: cover !important;
+		width: 100%;
+		position: relative;
+	}
+	&__description {
+		position: absolute;
+		bottom: 103px;
+		max-width: 572px;
+	}
+	&__title {
+		color: #fff;
+		font-family: "GTWalsheimPro";
+		font-weight: 200;
+		font-size: 80px;
+		text-transform: uppercase;
+		line-height: 1.2;
+		margin-bottom: 13px;
+	}
+	&__text {
+		background-color: #fff;
+		padding: 15px;
+		line-height: 1.3;
+		font-size: 15px;
+	}
+}
+
 .head_date {
 	font-size: 14px;
 	color: #666666;
@@ -474,37 +508,7 @@ header {
 .index_slider {
 	padding-bottom: 134px;
 }
-.slider_index_top {
-	position: relative;
-	&_el {
-		min-height: 797px;
-		background-repeat: no-repeat !important;
-		background-size: cover !important;
-		width: 100%;
-		position: relative;
-		&_disc {
-			position: absolute;
-			bottom: 103px;
-			max-width: 572px;
-			.gradient {
-				color: #fff;
-				font-family: "GTWalsheimPro";
-				font-weight: 200;
-				font-size: 80px;
-				text-transform: uppercase;
-				line-height: 1.2;
-				margin-bottom: 13px;
-			}
-			&_txt {
-				background-color: #fff;
-				padding: 15px;
-				line-height: 1.3;
-				font-size: 15px;
-			}
 
-		}
-	}
-}
 
 	#customDots.owl-dots {
 		position: absolute;
