--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -272,6 +272,24 @@ ul.breadcrumb li a:hover {
 					-webkit-text-fill-color: transparent;
 					font-family: "GTWalsheimPro";
 					font-weight: 200;
+					&.with_border:after {
+					/* Градиент */
+								background: rgba(215,14,98,1);
+								background: -moz-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
+								background: -webkit-gradient(left top, right top, color-stop(0%, rgba(215,14,98,1)), color-stop(100%, rgba(7,88,186,1)));
+								background: -webkit-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
+								background: -o-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
+								background: -ms-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
+								background: linear-gradient(to right, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
+								filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d70e62', endColorstr='#0758ba', GradientType=1 );
+								content: "";
+								display: block;
+								/* Вместо толщины */
+								height: 3px;
+								width: 100%;
+								margin-top: 9px;
+
+					}
 				}
 			}
 .gradient_bg {
@@ -549,33 +567,37 @@ b, strong {
 			border-color: #fff !important;
 		}
 	}
-.features {
-	.fz18 {
+.b-stats {
+	&__text {
+		font-size: 18px;
 		line-height: 1.9;
 		padding-bottom: 210px;
 	}
-	&_numbers {
+	&__numbers {
 
-			&_el {
+			&-item {
 				margin-right: 70px;
 				&:last-child {
 					margin-right: 0;
 				}
-				span.gradient.text {
-					font-size: 57px;
-					padding-right: 13px;
+			}
+
+			&-text {
+				font-size: 57px;
+				padding-right: 13px;
 				}
 				span {
 					line-height: 1;
 					display: inline-block;
 				}
-			}
-
 	}
-	&_right {
+}
+.b-features{
+	&__container {
 		padding-top: $gutter2;
-		&_list {
-			li {
+	}
+	&__list {
+			&-item {
 				position: relative;
 				display: block;
 				padding-left: 110px;
@@ -583,16 +605,7 @@ b, strong {
 				&:last-child {
 					margin-bottom: 0;
 				}
-				span {
-					display: block;
-					font-size: 13px;
-					&.head {
-						font-weight: 500;
-						font-size: 16px;
-						padding-bottom: 5px;
-					}
 
-				}
 				&:before {
 					position: absolute;
 					content: '';
@@ -603,38 +616,47 @@ b, strong {
 					background-repeat: no-repeat;
 					background-size: cover;
 					top: 15px;
-				}
-				&.features_right_list_first:before {
 					@include background-2x( '../img/features_right', 'png');
 				}
-				&.features_right_list_scnd:before {
+				&.scnd:before {
 					@include background-2x( '../img/features_right2', 'png');
 				}
-				&.features_right_list_thrd:before {
+				&.thrd:before {
 					@include background-2x( '../img/features_right3', 'png');
 				}
-				&.features_right_list_frth:before {
+				&.frth:before {
 					@include background-2x( '../img/features_right4', 'png');
 				}
-				&.features_right_list_ffth:before {
+				&.ffth:before {
 					@include background-2x( '../img/features_right5', 'png');
 				}
 			}
+
+		}		
+		&__text {
+			display: block;
+			font-size: 13px;
+			&-head {
+				font-weight: 500;
+				font-size: 16px;
+				padding-bottom: 5px;
+			}
 		}
+}
+.b-collections {
+	&__slider{
+			width: 134%;
+			.owl-nav,.owl-dots {
+				display: none;
+			}
+
 	}
 }
-.slider_index2 {
-	// position: absolute;
-	width: 134%;
-	// left: 15px;
-.owl-nav,.owl-dots {
-	display: none;
-}
-}
+
 .catalog {
-	&_item {
+	&__item {
 		position: relative;
-		&_new {
+		&-new {
 			position: absolute;
 			top: 0;
 			padding:10px 18px;
@@ -648,30 +670,32 @@ b, strong {
 			color:#fff;
 
 		}
-		&_img {
+		&-top {
 			width: 100%;
 			height: 257px;
 			margin-top: 15px;
-			img {
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-			}
 		}   
-		&_disc {
+		&-img {
+			height: 100%;
+			object-fit: cover;
+		}
+		&-desc {
 			text-align: center;
 			margin-top: 35px;
-			a {
-				display: block;
-				font-size: 18px;
-				color:#1f4a8e;
+		}
+
+		&-link {
+			display: block;
+			font-size: 18px;
+			color:#1f4a8e;
+		}
+		&-price {
+			display: block;
+			color:#636363;
 			}
-			span {
-				display: block;
-				color:#636363;
-			}
+
 	}
-	}
+
 	&_major_link {
 		color: $blue;
 		font-size: 14px;
@@ -712,12 +736,11 @@ b, strong {
 
 	}
 }
-.professionals {
-	&_disc {
+.b-professionals {
+	&__desc {
 		font-size: 15px;
 		padding-bottom: 20px;
-		&_links {
-			a {
+		&-link {
 				font-weight: bold;
 				letter-spacing: 1px;
 				font-size: 12px;
@@ -728,9 +751,9 @@ b, strong {
 					margin-right: 0;
 				}
 			}
-		}
 	}
-	&_banner {
+}
+.midbanner {
 		@include background-2x( '../img/professionals_banner', 'png');
 		background-size: cover;
 		padding-top: 45px;
@@ -741,12 +764,11 @@ b, strong {
 		font-size: 39px;
 		font-family: "GTWalsheimPro";
 		font-weight: 500;
-		a {
+		.but {
 			display: inline-block;
 		}
 	}
-}
-.news {
+.b-news {
 	margin-bottom: $gutter;
 	&_item {
 		margin-top: $gutter;
@@ -815,27 +837,28 @@ b, strong {
 			}
 		}
 		}
-	&_tabs {
+	&__tabs {
 		padding-bottom: 40px;
-		a {
+		&-link {
 			font-weight: bold;
 			margin-left: 40px;
 			font-size: 13px;
 			color: $blue;
 			text-transform: uppercase;
-			&.gradient.text {
+			&.active {
+				font-family: "GTWalsheimPro";
+				font-weight: 300;				
 				font-size: 38px;
 				margin-left: 0px;
-				font-weight: 300;
 				display: inline-block;
+				background: rgba(215,14,98,1);
+				background: linear-gradient(to right, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d70e62', endColorstr='#0758ba', GradientType=1 );
+				-webkit-background-clip: text;
+				-webkit-text-fill-color: transparent;
 				&:after {
 				/* Градиент */
 							background: rgba(215,14,98,1);
-							background: -moz-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
-							background: -webkit-gradient(left top, right top, color-stop(0%, rgba(215,14,98,1)), color-stop(100%, rgba(7,88,186,1)));
-							background: -webkit-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
-							background: -o-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
-							background: -ms-linear-gradient(left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
 							background: linear-gradient(to right, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
 							filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d70e62', endColorstr='#0758ba', GradientType=1 );
 							content: "";
