--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -219,6 +219,9 @@
 	}
 
 }
+*,*:active{
+	outline:none;
+}
 h1 {
 	text-transform: uppercase;
 	font-size: 60px;
@@ -900,11 +903,11 @@ b, strong {
 			cursor: pointer;
 
 			&.owl-prev {
-			background: url(../img/arrow_left.svg) no-repeat;
+			background: url(../img/arrow_left.png) no-repeat;
 			background-size: cover;
 			}
 			&.owl-next {
-			background: url(../img/arrow_right.svg) no-repeat;
+			background: url(../img/arrow_right.png) no-repeat;
 			background-size: cover;
 			margin-left: 13px;
 			}
@@ -1095,6 +1098,12 @@ b, strong {
 			}
 			ul {
 			}
+		&-padding {
+			padding-left: 70px;
+			@include media-breakpoint-up(md) {
+				padding-left: 0;
+			}
+		}
 	}
 	&_frame {
 		width: 100%;
@@ -2268,6 +2277,14 @@ b, strong {
 	&.margin_zero {
 		margin-top: 0;
 	}
+	&__col {
+		width: 20%;
+		padding: 0 15px;
+		margin-top: $gutter/2;
+		@include media-breakpoint-down(md) {
+			width: 100%;
+		}
+	}
 	&__logo {
 			font-weight: 500;
 			margin-bottom: $gutter/2;
@@ -2284,11 +2301,10 @@ b, strong {
 			}
 		}
 	&__menu {
-		margin-top: $gutter/2;
 			&-link {
 				font-size: 12px;
 				color: #000;
-				margin-bottom: 10px;
+				margin-bottom: 7px;
 				display: block;
 				white-space: nowrap;
 			}
@@ -2296,6 +2312,9 @@ b, strong {
 			white-space: nowrap;
 			float: none;
 			margin-top: $gutter;
+		}
+		&-social {
+			margin-bottom: 15px;
 		}
 	}
 		&__newitems {
@@ -2310,6 +2329,7 @@ b, strong {
 		}
 	&__contacts {
 		font-size: 12px;
+		margin-top: $gutter/2;
 		&-title {
 			&:first-child {
 				display: inline-block;
@@ -2317,9 +2337,11 @@ b, strong {
 			}
 		}
 		&-subscribe {
-			margin: $gutter*2 0;
+			margin: $gutter*3 0px $gutter 0px;
+			width: 100%;
 			display: block;
 			border:none;
+			padding-bottom: 13px;
 			font-weight: bold;
 			background-color: transparent;
 			border-bottom: 1px solid #cccccc;
@@ -2354,7 +2376,7 @@ b, strong {
   			text-transform: uppercase;
   			position: absolute;
   			right: 60px;
-  			bottom: 40px;
+  			bottom: 62px;
   			&:before {
   				content: '';
 				@include background-2x( '../img/footer_up', 'png');
