--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1099,8 +1099,8 @@ b, strong {
 			ul {
 			}
 		&-padding {
-			padding-left: 70px;
-			@include media-breakpoint-up(md) {
+			padding-left: 120px;
+			@include media-breakpoint-down(md) {
 				padding-left: 0;
 			}
 		}
@@ -2309,6 +2309,7 @@ b, strong {
 				white-space: nowrap;
 			}
 		.but {
+			display: inline-block;
 			white-space: nowrap;
 			float: none;
 			margin-top: $gutter;
@@ -2376,14 +2377,14 @@ b, strong {
   			text-transform: uppercase;
   			position: absolute;
   			right: 60px;
-  			bottom: 62px;
+  			bottom: 74px;
   			&:before {
   				content: '';
 				@include background-2x( '../img/footer_up', 'png');
 				width: 10px;
 				height: 237px;
 				display: inline-block;
-				margin-bottom: 15px;
+				margin-bottom: 39px;
 
   			}
 		}
